--- a/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css
+++ b/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css
@@ -5,6 +5,11 @@ body {-webkit-nbsp-mode:normal !important;margin: 0px !important;padding:0px !im
 .comp_0{position:absolute;z-index:10000;}
 .comp_1{position:absolute;z-index:10040;}
 .comp_1 .wafx-menunid2 .wafx-menu-bt-hamburger svg{fill:#000000;}
+.comp_10{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50010;}
+.comp_11{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50015;}
+.comp_12{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50020;}
+.comp_13{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50025;}
+.comp_14{position:absolute;z-index:50030;}
 .comp_2{background-color:#c7c7c7;position:absolute;z-index:10015;}
 .comp_3{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:4px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:10020;}
 .comp_4{position:absolute;z-index:10030;}
@@ -12,14 +17,24 @@ body {-webkit-nbsp-mode:normal !important;margin: 0px !important;padding:0px !im
 .comp_6{position:absolute;z-index:10035;}
 .comp_7{background-color:#eae8ec;position:absolute;z-index:10045;}
 .comp_8{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:10050;}
-.comp_9{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50005;}
+.comp_9{position:absolute;z-index:50005;}
 .t0{font-weight:400;}
 .t1{font-weight:400;}
+.t10{font-weight:700;}
+.t11{text-decoration:underline;}
+.t12{font-weight:700;}
+.t13{font-weight:700;text-decoration:underline;}
+.t14{font-weight:400;}
+.t15{font-weight:400;}
+.t16{font-weight:400;}
 .t2{font-weight:400;}
 .t3{font-weight:400;}
 .t4{color:#ffffff;font-family:Arial;font-weight:700;}
 .t5{color:#ffffff;font-family:Arial;font-weight:700;}
 .t6{color:#ffffff;font-family:Arial;font-weight:700;}
+.t7{text-decoration:underline;}
+.t8{font-weight:700;}
+.t9{text-decoration:underline;}
 .wafx-menunid2 .wafx-menu-frame-main .wafx-menu-item{color:#9cff3b;font-family:Arial;font-style:normal;font-weight:400;padding:0px;padding-left:10px;padding-right:10px;text-decoration:none;}
 .wafx-menunid2 .wafx-menu-frame-main .wafx-menu-item:hover{background-color:#000000;color:#ff0000;}
 .wafx-menunid2 .wafxMenuItemLeftPad{padding-left:25px;}
@@ -33,6 +48,11 @@ body{background-color:#ffffff;}
 .blockPagecontainer{width:1024px;}
 .compVis_0{display:block;}
 .compVis_1{display:block;}
+.compVis_10{display:block;}
+.compVis_11{display:block;}
+.compVis_12{display:block;}
+.compVis_13{display:block;}
+.compVis_14{display:block;}
 .compVis_2{display:block;}
 .compVis_3{display:block;}
 .compVis_4{display:block;}
@@ -44,6 +64,12 @@ body{background-color:#ffffff;}
 .comp_0{height:186px;left:0px;top:0px;width:1024px;}
 .comp_0 .wafx-img-picture{background-image:url(./wafx_res/Images/-0-1024-{4b96c3de-6b8c-4e0e-af57-70466176c74f});background-size:1024px 185px;height:185px;left:0px;top:0px;width:1024px;}
 .comp_1{background-color:#000000;border-radius:1px;height:41px;left:0px;top:184.265px;width:1024px;}
+.comp_10{height:191px;left:301.824px;top:243px;width:298px;}
+.comp_11{height:212px;left:302px;top:441.25px;width:298px;}
+.comp_12{height:196px;left:302px;top:670px;width:298px;}
+.comp_13{height:286px;left:687px;top:242.799px;width:290px;}
+.comp_14{height:621px;left:566.129px;top:81.7742px;width:147px;}
+.comp_14 .wafx-img-picture{background-image:url(./wafx_res/Images/-0-147-straight-vertical-line-png-8-sales-coach-now-vertical-line-png-2000_3938.png);background-size:147px 289px;height:289px;left:0px;top:166px;width:147px;}
 .comp_2{height:115px;left:0px;top:885px;width:1024px;}
 .comp_3{height:101px;left:11px;top:899px;width:292px;}
 .comp_4{height:43px;left:887.124px;top:943.5px;width:33px;}
@@ -54,7 +80,8 @@ body{background-color:#ffffff;}
 .comp_6 .wafx-img-picture{background-image:url(./wafx_res/Images/-0-27-Screen%20Shot%202019-09-09%20at%208.32.58%20AM.png);background-size:27px 33px;height:33px;left:8px;top:0px;width:27px;}
 .comp_7{height:659px;left:0px;top:226px;width:1024px;}
 .comp_8{height:165px;left:12px;top:10.5px;width:556px;}
-.comp_9{height:100px;left:26px;top:258px;width:290px;}
+.comp_9{height:220px;left:23.1712px;top:232px;width:247px;}
+.comp_9 .wafx-img-picture{background-image:url(./wafx_res/Images/-0-247-Daniel.jpg);background-size:247px 185px;height:185px;left:0px;top:17px;width:247px;}
 .t0{font-size:14px;}
 .t1{font-size:14px;}
 .t2{font-size:14px;}
