--- a/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css
+++ b/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css
@@ -37,12 +37,11 @@ color:#0000ff !important;text-decoration:underline !important;}
 .t1{font-weight:400;}
 .t10{font-weight:700;}
 .t11{font-weight:700;}
-.t12{font-weight:700;}
-.t13{font-weight:700;}
-.t14{font-weight:700;text-decoration:underline;}
-.t15{font-weight:700;text-decoration:underline;}
-.t16{font-style:italic;font-weight:700;text-decoration:underline;}
-.t17{font-weight:700;text-decoration:underline;}
+.t12{font-weight:700;text-decoration:underline;}
+.t13{font-weight:700;text-decoration:underline;}
+.t14{font-style:italic;font-weight:700;text-decoration:underline;}
+.t15{;font-style:italic;font-weight:700;}
+.t16{font-weight:700;text-decoration:underline;}
 .t2{font-weight:400;}
 .t3{font-weight:400;}
 .t4{color:#ffffff;font-family:Arial;font-weight:700;}
@@ -97,15 +96,15 @@ body{background-color:#ffffff;}
 .comp_12 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
 .comp_13{height:7px;left:36px;top:458.5px;width:7px;}
 .comp_13 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
-.comp_14{height:7px;left:35px;top:515.5px;width:7px;}
+.comp_14{height:7px;left:35px;top:533.5px;width:7px;}
 .comp_14 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
-.comp_15{height:7px;left:36px;top:572px;width:7px;}
+.comp_15{height:7px;left:36px;top:611px;width:7px;}
 .comp_15 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
-.comp_16{height:7px;left:37px;top:649px;width:7px;}
+.comp_16{height:7px;left:37px;top:667px;width:7px;}
 .comp_16 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
-.comp_17{height:7px;left:38px;top:743.5px;width:7px;}
+.comp_17{height:7px;left:38px;top:761.5px;width:7px;}
 .comp_17 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
-.comp_18{height:7px;left:37.5px;top:801.5px;width:7px;}
+.comp_18{height:7px;left:37.5px;top:817.5px;width:7px;}
 .comp_18 .wafx-img-picture{height:7px;left:0px;top:0px;width:7px;}
 .comp_19{height:100px;left:729px;top:246px;width:290px;}
 .comp_2{height:115px;left:0px;top:885px;width:1024px;}
@@ -127,10 +126,11 @@ body{background-color:#ffffff;}
 .comp_9{height:565px;left:56.1305px;top:296.121px;width:579px;}
 .t0{font-size:14px;}
 .t1{font-size:14px;}
+.t12{font-size:20px;}
+.t13{font-size:20px;}
 .t14{font-size:20px;}
 .t15{font-size:20px;}
 .t16{font-size:20px;}
-.t17{font-size:20px;}
 .t2{font-size:14px;}
 .t3{font-size:14px;}
 .t4{font-size:56px;}
