--- a/wafx_res/standard/multimedia/wafx-multimedia.css
+++ b/wafx_res/standard/multimedia/wafx-multimedia.css
@@ -32,11 +32,52 @@ opacity:1;
  -webkit-transform: translate3d(0, 0, 0);
 }
 
+
+.wafx-carousel.blueimp-gallery-carousel
+{
+     margin: 0px;
+
+    box-shadow: 0px 0px 0px transparent;
+    text-shadow: 0px 0px 0px transparent !important;
+}
+.wafx-carousel>.title
+{
+    text-shadow: none;
+         padding:0px;
+           left:0px;
+}
+
+
+.wafx-carousel>.title h1
+{
+  padding:0px;
+  margin:0px;
+}
+
+.wafx-carousel>.title p
+{
+  padding:0px;
+  /*margin:0px;*/
+
+}
+
+.wafx-slideshow-text-wrap
+{
+  width:100%;
+  left:0px;
+}
+.wafx-slideshow-text-wrap div
+{
+  width:100%;
+  left:0px;
+}
+/*
 .wafx-carousel.blueimp-gallery-carousel
 {
     margin: 0px;
     box-shadow: 0px 0px 0px #000;
 }
+
 
 .wafx-carousel>.title
 {
@@ -50,22 +91,12 @@ opacity:1;
    bottom:0px;
 
    text-align:left;
-   /*top:auto !important;*/
    top:0px;
 }
 
 
-.wafx-carousel>.title h1
-{
-  padding:0px;
-  margin:0px;
-}
 
-.wafx-carousel>.title p
-{
-  padding:0px;
-  margin:0px;
-}
+*/
 
 
 
