--- a/3dsi2.css
+++ b/3dsi2.css
@@ -22,6 +22,7 @@ color:#0000ff !important;text-decoration:underline !important;}
 .comp_9{position:absolute;z-index:50015;}
 .t0{font-weight:400;}
 .t1{font-weight:400;}
+.t10{;}
 .t2{font-weight:400;}
 .t3{font-weight:400;}
 .t4{color:#ffffff;font-family:Arial;font-weight:700;}
