--- a/research.css
+++ b/research.css
@@ -11,21 +11,44 @@ color:#0000ff !important;text-decoration:underline !important;}
 .comp_0{position:absolute;z-index:10000;}
 .comp_1{position:absolute;z-index:10040;}
 .comp_1 .wafx-menunid2 .wafx-menu-bt-hamburger svg{fill:#000000;}
+.comp_10{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50040;}
+.comp_11{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50070;}
+.comp_12{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50145;}
+.comp_13{position:absolute;z-index:50150;}
+.comp_14{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50195;}
+.comp_15{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50550;}
+.comp_16{position:absolute;z-index:50555;}
+.comp_17{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:51205;}
+.comp_18{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50600;}
+.comp_19{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50400;}
 .comp_2{background-color:#c7c7c7;position:absolute;z-index:10015;}
+.comp_20{position:absolute;z-index:51210;}
+.comp_21{position:absolute;z-index:51215;}
+.comp_22{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:51620;}
+.comp_23{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:52830;}
 .comp_3{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:4px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:10020;}
 .comp_4{position:absolute;z-index:10030;}
 .comp_5{position:absolute;z-index:10025;}
 .comp_6{position:absolute;z-index:10035;}
 .comp_7{background-color:#eae8ec;position:absolute;z-index:10045;}
 .comp_8{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:10050;}
-.comp_9{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50005;}
+.comp_9{-webkit-nbsp-mode:normal;letter-spacing:normal;margin:5px !important;margin-left:0px !important;margin-top:0px !important;overflow:hidden;padding:0px !important;position:absolute;word-spacing:0px;word-wrap:break-word;z-index:50025;}
 .t0{font-weight:400;}
 .t1{font-weight:400;}
+.t10{color:#29612b;font-weight:700;text-decoration:underline;}
+.t11{font-style:italic;}
+.t12{color:#29612b;font-weight:700;text-decoration:underline;}
+.t13{color:#403597;font-weight:700;text-decoration:underline;}
+.t16{font-style:italic;}
+.t17{font-style:italic;}
+.t19{font-style:italic;}
 .t2{font-weight:400;}
 .t3{font-weight:400;}
 .t4{color:#ffffff;font-family:Arial;font-weight:700;}
 .t5{color:#ffffff;font-family:Arial;font-weight:700;}
 .t6{color:#ffffff;font-family:Arial;font-weight:700;}
+.t7{color:#29612b;font-weight:700;text-decoration:underline;}
+.t9{color:#29612b;font-weight:700;text-decoration:underline;}
 .wafx-menunid2 .wafx-menu-frame-main .wafx-menu-item{color:#9cff3b;font-family:'Arial';font-style:normal;font-weight:400;padding:0px;padding-left:10px;padding-right:10px;text-decoration:none;}
 .wafx-menunid2 .wafx-menu-frame-main .wafx-menu-item:hover{background-color:#000000;color:#ff0000;}
 .wafx-menunid2 .wafxMenuItemLeftPad{padding-left:25px;}
@@ -39,7 +62,21 @@ body{background-color:#ffffff;}
 .blockPagecontainer{width:1024px;}
 .compVis_0{display:block;}
 .compVis_1{display:block;}
+.compVis_10{display:block;}
+.compVis_11{display:block;}
+.compVis_12{display:block;}
+.compVis_13{display:block;}
+.compVis_14{display:block;}
+.compVis_15{display:block;}
+.compVis_16{display:block;}
+.compVis_17{display:block;}
+.compVis_18{display:block;}
+.compVis_19{display:block;}
 .compVis_2{display:block;}
+.compVis_20{display:block;}
+.compVis_21{display:block;}
+.compVis_22{display:block;}
+.compVis_23{display:block;}
 .compVis_3{display:block;}
 .compVis_4{display:block;}
 .compVis_5{display:block;}
@@ -51,24 +88,54 @@ body{background-color:#ffffff;}
 .comp_0 .wafx-img-picture{height:185px;left:0px;top:0px;width:1024px;}
 .comp_1{background-color:#000000;border:1px solid #000000;border-radius:1px;height:41px;left:0px;margin:-1px;top:184.265px;width:1024px;}
 .comp_1 .inner-box{border:1px solid #000000;border-radius:0px;height:calc(100% - 2px);left:1px;margin:-1px;position:absolute;top:1px;width:calc(100% - 2px);z-index:-1;}
-.comp_2{height:115px;left:0px;top:885px;width:1024px;}
-.comp_3{height:101px;left:11px;top:899px;width:292px;}
-.comp_4{height:43px;left:887.124px;top:943.5px;width:33px;}
+.comp_10{height:200px;left:30px;top:298.851px;width:477px;}
+.comp_11{height:39px;left:29.5px;top:552.123px;width:287px;}
+.comp_12{height:39px;left:29.5px;top:1322.5px;width:287px;}
+.comp_13{height:323px;left:580px;top:1329px;width:444px;}
+.comp_14{height:48px;left:599.013px;top:1652px;width:395px;}
+.comp_15{height:39px;left:29.5px;top:927px;width:287px;}
+.comp_16{height:359px;left:518px;top:891px;width:506px;}
+.comp_17{height:257px;left:30px;top:973px;width:477px;}
+.comp_18{height:257px;left:30.5px;top:599.915px;width:477px;}
+.comp_19{height:44px;left:597.915px;top:1253px;width:292px;}
+.comp_2{height:115px;left:0px;top:1713px;width:1024px;}
+.comp_20{height:220px;left:583.955px;top:255px;width:409px;}
+.comp_20 .wafx-img-picture{height:220px;left:14px;top:0px;width:381px;}
+.comp_21{height:274px;left:558.25px;top:521px;width:388px;}
+.comp_21 .wafx-img-picture{height:274px;left:42px;top:0px;width:303px;}
+.comp_22{height:66px;left:600px;top:790px;width:292px;}
+.comp_23{height:257px;left:31px;top:1378.5px;width:477px;}
+.comp_3{height:101px;left:11px;top:1726px;width:292px;}
+.comp_4{height:43px;left:887.124px;top:1739.5px;width:33px;}
 .comp_4 .wafx-img-picture{height:33px;left:0px;top:5px;width:33px;}
-.comp_5{height:33px;left:928.041px;top:949px;width:36px;}
+.comp_5{height:33px;left:928.041px;top:1745px;width:36px;}
 .comp_5 .wafx-img-picture{height:33px;left:1px;top:0px;width:33px;}
-.comp_6{height:33px;left:964.149px;top:949px;width:43px;}
+.comp_6{height:33px;left:964.149px;top:1745px;width:43px;}
 .comp_6 .wafx-img-picture{height:33px;left:8px;top:0px;width:27px;}
-.comp_7{height:659px;left:0px;top:226px;width:1024px;}
+.comp_7{height:1487px;left:0px;top:226px;width:1024px;}
 .comp_8{height:165px;left:12px;top:10.5px;width:556px;}
-.comp_9{height:100px;left:18px;top:252px;width:290px;}
+.comp_9{height:39px;left:30.0082px;top:253.123px;width:189px;}
 .t0{font-size:14px;}
 .t1{font-size:14px;}
+.t10{font-size:20px;}
+.t11{font-size:12px;}
+.t12{font-size:20px;}
+.t13{font-size:20px;}
+.t14{font-size:16px;}
+.t15{font-size:16px;}
+.t16{font-size:12px;}
+.t17{font-size:12px;}
+.t18{font-size:12px;}
+.t19{font-size:12px;}
 .t2{font-size:14px;}
+.t20{font-size:16px;}
 .t3{font-size:14px;}
 .t4{font-size:56px;}
 .t5{font-size:24px;}
 .t6{font-size:24px;}
+.t7{font-size:20px;}
+.t8{font-size:16px;}
+.t9{font-size:20px;}
 .textShape_1024{display:block;}
 .waBlockSocialBar{display:none;}
 .wafx-menunid2 .wafx-menu{display:flex;font-size:16px;}
